# D-Bot

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yaml  keyboards.py  loader.py  pyproject.toml  settings.py
.github/workflows/: build_and_push.yaml  pytest.yaml  ruff.yaml
deploy/: docker-compose.yaml
handlers/: __init__.py  commands.py  recognizer.py  voices.py
